tdf#91145: Set Cell Background Color in Table Broken in Writer 5.0

- iterate over PaMs, not over Shells
- regression from 0ed7c8b55a026d7d98f9c994ad5e8626dd9504b2

Change-Id: I33ea486d416a7e64fd97938ce09492209c102c88